--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,24 @@
     <groupId>com.it_uatech</groupId>
     <artifactId>Spring_LearningCourse</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>12</maven.compiler.source>
         <maven.compiler.target>12</maven.compiler.target>
     </properties>
+
+    <modules>
+        <module>HomeWork/Spring_framework_01_XML_config</module>
+    </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.6.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 </project>
