--- a/HomeWork/Spring_homework_01_xml/pom.xml
+++ b/HomeWork/Spring_homework_01_xml/pom.xml
@@ -24,6 +24,12 @@
         <artifactId>spring-context</artifactId>
         <version>5.2.6.RELEASE</version>
     </dependency>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 
 </project>
