--- a/HomeWork/Spring_homework_05_Spring_Boot_Spring_Shell/pom.xml
+++ b/HomeWork/Spring_homework_05_Spring_Boot_Spring_Shell/pom.xml
@@ -2,8 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <name>L04 - spring boot configuration, student test</name>
+    <name>L05 - spring boot and shell configuration, student test</name>
     <description>Home work</description>
 
     <parent>
@@ -14,7 +13,7 @@
     </parent>
 
     <groupId>com.it_uatech</groupId>
-    <artifactId>Spring_homework_04_Spring_Boot</artifactId>
+    <artifactId>Spring_homework_05_Spring_Boot_Spring_Shell</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
@@ -27,6 +26,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.shell</groupId>
+            <artifactId>spring-shell-starter</artifactId>
+            <version>2.0.1.RELEASE</version>
         </dependency>
 
         <dependency>
