--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>HomeWork/Spring_homework_02_Local_annotation</module>
         <module>HomeWork/Spring_homework_04_Spring_Boot</module>
         <module>HomeWork/Spring_homework_05_Spring_Boot_Spring_Shell</module>
+        <module>HomeWork/Spring_homework_06_Spring_JDBC</module>
     </modules>
 
     <dependencies>
